--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,25 @@
   </head>
   <body>
     <div id="app"></div>
+      <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase-auth.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase-database.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase-firestore.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase-messaging.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase-storage.js"></script>
+
+      <script>
+        // Initialize Firebase
+        var config = {
+          apiKey: "AIzaSyCgYLyDM38JZEvWOn19tmmrcXM9FtbUwY0",
+          authDomain: "take3-44012.firebaseapp.com",
+          databaseURL: "https://take3-44012.firebaseio.com",
+          projectId: "take3-44012",
+          storageBucket: "take3-44012.appspot.com",
+          messagingSenderId: "807072044786"
+        };
+      </script>
   </body>
 </html>
 
