Map_box_in_process

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Rammetto+One|Roboto:400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="/style.css" />
   <script src="https://unpkg.com/packery@2/dist/packery.pkgd.min.js"></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v0.44.0/mapbox-gl.css' rel='stylesheet' />
   <script defer src="/bundle.js"></script>
 </head>
 
